--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mongoose": "^8.2.2",
-    "next": "14.1.4",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.3",
+    "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
