--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio2024",
+  "name": "lamadevnext14dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,29 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "mongodb": "^6.5.0",
-    "mongoose": "^8.2.3",
-    "next": "^14.1.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "@next/eslint-plugin-next": "14.0.1",
+    "bcrypt": "5.1.1",
+    "mongoose": "8.0.0",
+    "next": "^14.0.1",
+    "next-auth": "5.0.0-beta.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "4.11.0",
+    "recharts": "2.9.0",
+    "use-debounce": "9.0.4"
   },
   "devDependencies": {
-    "@react-three/drei": "^9.102.6",
-    "@react-three/fiber": "^8.15.19",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
-    "framer-motion": "^11.0.15",
-    "postcss": "^8",
-    "react-intersection-observer": "^9.8.1",
-    "tailwindcss": "^3.3.0",
-    "three": "^0.162.0",
-    "typescript": "^5"
+    "eslint": "8",
+    "eslint-config-next": "14.0.1"
   }
 }
