--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "framer-motion": "^10.16.2",
     "mongoose": "^7.5.0",
     "next": "^14.2.1",
-    "postcss": "8.4.29",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
