--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.14.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "eslint-config-next": "^14.2.1",
     "framer-motion": "^10.16.2",
